// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WML normalize addElement should add an element with differing contextStack 1`] = `
Object {
  "ABC": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "ABC#DEF",
            "tag": "Exit",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "name": "Vortex",
      },
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "Condition-0",
            "tag": "Condition",
          },
        ],
        "location": undefined,
        "render": Array [
          Object {
            "spaceAfter": false,
            "spaceBefore": false,
            "tag": "String",
            "value": "Vortex!",
          },
        ],
      },
    ],
    "key": "ABC",
    "tag": "Room",
  },
  "ABC#DEF": Object {
    "appearances": Array [
      Object {
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "ABC",
            "tag": "Room",
          },
        ],
      },
    ],
    "key": "ABC#DEF",
    "tag": "Exit",
  },
  "Condition-0": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 1,
            "key": "ABC",
            "tag": "Room",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
      },
    ],
    "if": "true",
    "key": "Condition-0",
    "tag": "Condition",
  },
  "Test": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "ABC",
            "tag": "Room",
          },
          Object {
            "index": 0,
            "key": "Condition-0",
            "tag": "Condition",
          },
        ],
        "contextStack": Array [],
      },
    ],
    "key": "Test",
    "tag": "Asset",
  },
}
`;

exports[`WML normalize addElement should add an element with matching contextStack 1`] = `
Object {
  "ABC": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "ABC#DEF",
            "tag": "Exit",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": undefined,
        "name": "Vortex",
        "render": Array [
          Object {
            "spaceAfter": false,
            "spaceBefore": false,
            "tag": "String",
            "value": "Vortex!",
          },
        ],
      },
    ],
    "key": "ABC",
    "tag": "Room",
  },
  "ABC#DEF": Object {
    "appearances": Array [
      Object {
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "ABC",
            "tag": "Room",
          },
        ],
      },
    ],
    "key": "ABC#DEF",
    "tag": "Exit",
  },
  "Condition-0": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
      },
    ],
    "if": "true",
    "key": "Condition-0",
    "tag": "Condition",
  },
  "Test": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "ABC",
            "tag": "Room",
          },
          Object {
            "index": 0,
            "key": "Condition-0",
            "tag": "Condition",
          },
        ],
        "contextStack": Array [],
      },
    ],
    "key": "Test",
    "tag": "Asset",
  },
}
`;

exports[`WML normalize addElement should add an element with unspecified indices in the context-stack 1`] = `
Object {
  "ABC": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "ABC#DEF",
            "tag": "Exit",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "name": "Vortex",
      },
    ],
    "key": "ABC",
    "tag": "Room",
  },
  "ABC#DEF": Object {
    "appearances": Array [
      Object {
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "ABC",
            "tag": "Room",
          },
        ],
      },
    ],
    "key": "ABC#DEF",
    "tag": "Exit",
  },
  "Condition-0": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "DEF",
            "tag": "Room",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": undefined,
        "render": undefined,
      },
    ],
    "if": "true",
    "key": "Condition-0",
    "tag": "Condition",
  },
  "DEF": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "DEF#ABC",
            "tag": "Exit",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "Condition-0",
            "tag": "Condition",
          },
        ],
        "location": undefined,
      },
    ],
    "key": "DEF",
    "tag": "Room",
  },
  "DEF#ABC": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "Condition-0",
            "tag": "Condition",
          },
          Object {
            "index": 0,
            "key": "DEF",
            "tag": "Room",
          },
        ],
        "location": undefined,
      },
    ],
    "from": "DEF",
    "key": "DEF#ABC",
    "tag": "Exit",
    "to": "ABC",
  },
  "Test": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "ABC",
            "tag": "Room",
          },
          Object {
            "index": 0,
            "key": "Condition-0",
            "tag": "Condition",
          },
        ],
        "contextStack": Array [],
      },
    ],
    "key": "Test",
    "tag": "Asset",
  },
}
`;

exports[`WML normalize postProcessAppearance should aggregate locations into Map rooms 1`] = `
Object {
  "TestAsset": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "TestMap",
            "tag": "Map",
          },
        ],
        "contextStack": Array [],
        "location": Array [
          0,
        ],
      },
    ],
    "key": "TestAsset",
    "tag": "Asset",
  },
  "TestMap": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "welcomeRoom",
            "tag": "Room",
          },
          Object {
            "index": 0,
            "key": "VORTEX",
            "tag": "Room",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "TestAsset",
            "tag": "Asset",
          },
        ],
        "images": Array [],
        "location": Array [
          0,
          0,
        ],
        "rooms": Object {
          "VORTEX": Object {
            "location": Array [
              0,
              0,
              1,
            ],
            "x": 0,
            "y": 0,
          },
          "welcomeRoom": Object {
            "location": Array [
              0,
              0,
              0,
            ],
            "x": 0,
            "y": 100,
          },
        },
      },
    ],
    "key": "TestMap",
    "tag": "Map",
  },
  "VORTEX": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "TestAsset",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "TestMap",
            "tag": "Map",
          },
        ],
        "location": Array [
          0,
          0,
          1,
        ],
      },
    ],
    "key": "VORTEX",
    "tag": "Room",
  },
  "welcomeRoom": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "TestAsset",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "TestMap",
            "tag": "Map",
          },
        ],
        "location": Array [
          0,
          0,
          0,
        ],
      },
    ],
    "key": "welcomeRoom",
    "tag": "Room",
  },
}
`;

exports[`WML normalize should accumulate multiple appearances of the same key 1`] = `
Object {
  "Condition-0": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 1,
            "key": "a123",
            "tag": "Room",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "errors": Array [],
        "location": Array [
          0,
          2,
        ],
        "props": Object {},
      },
    ],
    "dependencies": Array [],
    "if": "true",
    "key": "Condition-0",
    "tag": "Condition",
  },
  "Test": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "a123",
            "tag": "Room",
          },
          Object {
            "index": 0,
            "key": "Condition-0",
            "tag": "Condition",
          },
        ],
        "contextStack": Array [],
        "description": undefined,
        "errors": Array [],
        "location": Array [
          0,
        ],
        "props": Object {},
      },
    ],
    "fileName": "Test",
    "key": "Test",
    "player": undefined,
    "tag": "Asset",
    "zone": undefined,
  },
  "a123": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "display": undefined,
        "errors": Array [],
        "location": Array [
          0,
          1,
        ],
        "name": "Vortex",
        "props": Object {},
        "render": Array [
          Object {
            "spaceAfter": false,
            "spaceBefore": false,
            "tag": "String",
            "value": "Hello, world!",
          },
        ],
        "spaceAfter": false,
        "spaceBefore": false,
      },
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "Condition-0",
            "tag": "Condition",
          },
        ],
        "display": undefined,
        "errors": Array [],
        "location": Array [
          0,
          2,
          0,
        ],
        "props": Object {},
        "render": Array [
          Object {
            "spaceAfter": false,
            "spaceBefore": false,
            "tag": "String",
            "value": "Vortex!",
          },
        ],
        "spaceAfter": false,
        "spaceBefore": false,
      },
    ],
    "global": false,
    "key": "a123",
    "tag": "Room",
  },
}
`;

exports[`WML normalize should accumulate multiple appearances of the same key 2`] = `
Object {
  "Condition-0": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 2,
            "key": "a123",
            "tag": "Room",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          2,
        ],
      },
    ],
    "dependencies": Array [],
    "if": "true",
    "key": "Condition-0",
    "tag": "Condition",
  },
  "Test": Object {
    "Story": false,
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "a123",
            "tag": "Room",
          },
          Object {
            "index": 1,
            "key": "a123",
            "tag": "Room",
          },
          Object {
            "index": 0,
            "key": "Condition-0",
            "tag": "Condition",
          },
        ],
        "contextStack": Array [],
        "location": Array [
          0,
        ],
      },
    ],
    "fileName": "Test",
    "instance": false,
    "key": "Test",
    "tag": "Asset",
    "zone": undefined,
  },
  "a123": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          0,
        ],
        "name": "Vortex",
        "render": Array [],
        "spaceAfter": false,
        "spaceBefore": false,
      },
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          1,
        ],
        "name": "",
        "render": Array [
          Object {
            "tag": "String",
            "value": "Hello, world!",
          },
        ],
        "spaceAfter": false,
        "spaceBefore": false,
      },
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "Condition-0",
            "tag": "Condition",
          },
        ],
        "location": Array [
          0,
          2,
          0,
        ],
        "name": "",
        "render": Array [
          Object {
            "tag": "String",
            "value": "Vortex!",
          },
        ],
        "spaceAfter": false,
        "spaceBefore": false,
      },
    ],
    "global": false,
    "key": "a123",
    "tag": "Room",
  },
}
`;

exports[`WML normalize should correctly handle multiple and nested conditionals 1`] = `
Object {
  "Condition-0": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 1,
            "key": "a123",
            "tag": "Room",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "errors": Array [],
        "location": Array [
          0,
          1,
        ],
        "props": Object {},
      },
    ],
    "dependencies": Array [
      "strong",
    ],
    "if": "strong",
    "key": "Condition-0",
    "tag": "Condition",
  },
  "Condition-1": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "Condition-2",
            "tag": "Condition",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "errors": Array [],
        "location": Array [
          0,
          2,
        ],
        "props": Object {},
      },
    ],
    "dependencies": Array [
      "strong",
    ],
    "if": "!strong",
    "key": "Condition-1",
    "tag": "Condition",
  },
  "Condition-2": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 2,
            "key": "a123",
            "tag": "Room",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "Condition-1",
            "tag": "Condition",
          },
        ],
        "errors": Array [],
        "location": Array [
          0,
          2,
          0,
        ],
        "props": Object {},
      },
    ],
    "dependencies": Array [
      "trendy",
    ],
    "if": "trendy",
    "key": "Condition-2",
    "tag": "Condition",
  },
  "Test": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "a123",
            "tag": "Room",
          },
          Object {
            "index": 0,
            "key": "Condition-0",
            "tag": "Condition",
          },
          Object {
            "index": 0,
            "key": "Condition-1",
            "tag": "Condition",
          },
          Object {
            "index": 0,
            "key": "strong",
            "tag": "Variable",
          },
          Object {
            "index": 0,
            "key": "trendy",
            "tag": "Variable",
          },
        ],
        "contextStack": Array [],
        "description": undefined,
        "errors": Array [],
        "location": Array [
          0,
        ],
        "props": Object {},
      },
    ],
    "fileName": "Test",
    "key": "Test",
    "player": undefined,
    "tag": "Asset",
    "zone": undefined,
  },
  "a123": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "display": undefined,
        "errors": Array [],
        "location": Array [
          0,
          0,
        ],
        "name": "Vortex",
        "props": Object {},
        "render": Array [
          Object {
            "spaceAfter": false,
            "spaceBefore": false,
            "tag": "String",
            "value": "Hello, world!",
          },
        ],
        "spaceAfter": false,
        "spaceBefore": false,
      },
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "Condition-0",
            "tag": "Condition",
          },
        ],
        "display": undefined,
        "errors": Array [],
        "location": Array [
          0,
          1,
          0,
        ],
        "props": Object {},
        "render": Array [
          Object {
            "spaceAfter": false,
            "spaceBefore": false,
            "tag": "String",
            "value": "Vortex!",
          },
        ],
        "spaceAfter": false,
        "spaceBefore": false,
      },
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "Condition-1",
            "tag": "Condition",
          },
          Object {
            "index": 0,
            "key": "Condition-2",
            "tag": "Condition",
          },
        ],
        "display": undefined,
        "errors": Array [],
        "location": Array [
          0,
          2,
          0,
          0,
        ],
        "props": Object {},
        "render": Array [
          Object {
            "spaceAfter": false,
            "spaceBefore": false,
            "tag": "String",
            "value": "V.O.R.T.E.X.",
          },
        ],
        "spaceAfter": false,
        "spaceBefore": false,
      },
    ],
    "global": false,
    "key": "a123",
    "tag": "Room",
  },
  "strong": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "errors": Array [],
        "location": Array [
          0,
          3,
        ],
        "props": Object {},
      },
    ],
    "default": "false",
    "key": "strong",
    "tag": "Variable",
  },
  "trendy": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "errors": Array [],
        "location": Array [
          0,
          4,
        ],
        "props": Object {},
      },
    ],
    "default": "false",
    "key": "trendy",
    "tag": "Variable",
  },
}
`;

exports[`WML normalize should correctly handle multiple and nested conditionals 2`] = `
Object {
  "Condition-0": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 1,
            "key": "a123",
            "tag": "Room",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          1,
        ],
      },
    ],
    "dependencies": Array [
      "strong",
    ],
    "if": "strong",
    "key": "Condition-0",
    "tag": "Condition",
  },
  "Condition-1": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "Condition-2",
            "tag": "Condition",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          2,
        ],
      },
    ],
    "dependencies": Array [
      "strong",
    ],
    "if": "!strong",
    "key": "Condition-1",
    "tag": "Condition",
  },
  "Condition-2": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 2,
            "key": "a123",
            "tag": "Room",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "Condition-1",
            "tag": "Condition",
          },
        ],
        "location": Array [
          0,
          2,
          0,
        ],
      },
    ],
    "dependencies": Array [
      "trendy",
    ],
    "if": "trendy",
    "key": "Condition-2",
    "tag": "Condition",
  },
  "Test": Object {
    "Story": false,
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "a123",
            "tag": "Room",
          },
          Object {
            "index": 0,
            "key": "Condition-0",
            "tag": "Condition",
          },
          Object {
            "index": 0,
            "key": "Condition-1",
            "tag": "Condition",
          },
          Object {
            "index": 0,
            "key": "strong",
            "tag": "Variable",
          },
          Object {
            "index": 0,
            "key": "trendy",
            "tag": "Variable",
          },
        ],
        "contextStack": Array [],
        "location": Array [
          0,
        ],
      },
    ],
    "fileName": "Test",
    "instance": false,
    "key": "Test",
    "tag": "Asset",
    "zone": undefined,
  },
  "a123": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          0,
        ],
        "name": "Vortex",
        "render": Array [
          Object {
            "tag": "String",
            "value": "Hello, world!",
          },
        ],
        "spaceAfter": false,
        "spaceBefore": false,
      },
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "Condition-0",
            "tag": "Condition",
          },
        ],
        "location": Array [
          0,
          1,
          0,
        ],
        "name": "",
        "render": Array [
          Object {
            "tag": "String",
            "value": "Vortex!",
          },
        ],
        "spaceAfter": false,
        "spaceBefore": false,
      },
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "Condition-1",
            "tag": "Condition",
          },
          Object {
            "index": 0,
            "key": "Condition-2",
            "tag": "Condition",
          },
        ],
        "location": Array [
          0,
          2,
          0,
          0,
        ],
        "name": "",
        "render": Array [
          Object {
            "tag": "String",
            "value": "V.O.R.T.E.X.",
          },
        ],
        "spaceAfter": false,
        "spaceBefore": false,
      },
    ],
    "global": false,
    "key": "a123",
    "tag": "Room",
  },
  "strong": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          3,
        ],
      },
    ],
    "default": "false",
    "key": "strong",
    "tag": "Variable",
  },
  "trendy": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          4,
        ],
      },
    ],
    "default": "false",
    "key": "trendy",
    "tag": "Variable",
  },
}
`;

exports[`WML normalize should correctly serialize multiple unconditioned descriptions 1`] = `
Object {
  "Test": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "test",
            "tag": "Room",
          },
        ],
        "contextStack": Array [],
        "description": undefined,
        "errors": Array [],
        "location": Array [
          0,
        ],
        "props": Object {},
      },
    ],
    "fileName": "Test",
    "key": "Test",
    "player": undefined,
    "tag": "Asset",
    "zone": undefined,
  },
  "test": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "display": undefined,
        "errors": Array [],
        "location": Array [
          0,
          1,
        ],
        "props": Object {},
        "render": Array [
          Object {
            "spaceAfter": false,
            "spaceBefore": false,
            "tag": "String",
            "value": "One",
          },
          Object {
            "spaceAfter": false,
            "spaceBefore": false,
            "tag": "String",
            "value": "Two",
          },
        ],
        "spaceAfter": false,
        "spaceBefore": false,
      },
    ],
    "global": false,
    "key": "test",
    "tag": "Room",
  },
}
`;

exports[`WML normalize should correctly serialize multiple unconditioned descriptions 2`] = `
Object {
  "Test": Object {
    "Story": false,
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "test",
            "tag": "Room",
          },
          Object {
            "index": 1,
            "key": "test",
            "tag": "Room",
          },
        ],
        "contextStack": Array [],
        "location": Array [
          0,
        ],
      },
    ],
    "fileName": "Test",
    "instance": false,
    "key": "Test",
    "tag": "Asset",
    "zone": undefined,
  },
  "test": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          0,
        ],
        "name": "",
        "render": Array [
          Object {
            "tag": "String",
            "value": "One",
          },
        ],
        "spaceAfter": false,
        "spaceBefore": false,
      },
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          1,
        ],
        "name": "",
        "render": Array [
          Object {
            "tag": "String",
            "value": "Two",
          },
        ],
        "spaceAfter": false,
        "spaceBefore": false,
      },
    ],
    "global": false,
    "key": "test",
    "tag": "Room",
  },
}
`;

exports[`WML normalize should create wrapping elements for exits where needed 1`] = `
Object {
  "Test": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "a123",
            "tag": "Room",
          },
          Object {
            "index": 0,
            "key": "b456",
            "tag": "Room",
          },
        ],
        "contextStack": Array [],
        "description": undefined,
        "errors": Array [],
        "location": Array [
          0,
        ],
        "props": Object {},
      },
    ],
    "fileName": "Test",
    "key": "Test",
    "player": undefined,
    "tag": "Asset",
    "zone": undefined,
  },
  "a123": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "display": undefined,
        "errors": Array [],
        "location": Array [
          0,
          0,
        ],
        "props": Object {},
        "render": Array [],
        "spaceAfter": false,
        "spaceBefore": false,
      },
    ],
    "global": false,
    "key": "a123",
    "tag": "Room",
  },
  "b456": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "b456#a123",
            "tag": "Exit",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": undefined,
      },
    ],
    "key": "b456",
    "tag": "Room",
  },
  "b456#a123": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "b456",
            "tag": "Room",
          },
        ],
        "errors": Array [],
        "location": Array [
          0,
          0,
          0,
        ],
        "props": Object {},
      },
    ],
    "from": "b456",
    "key": "b456#a123",
    "name": undefined,
    "tag": "Exit",
    "to": "a123",
  },
}
`;

exports[`WML normalize should create wrapping elements for exits where needed 2`] = `
Object {
  "Test": Object {
    "Story": false,
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "a123",
            "tag": "Room",
          },
          Object {
            "index": 0,
            "key": "b456",
            "tag": "Room",
          },
        ],
        "contextStack": Array [],
        "location": Array [
          0,
        ],
      },
    ],
    "fileName": "Test",
    "instance": false,
    "key": "Test",
    "tag": "Asset",
    "zone": undefined,
  },
  "a123": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          0,
        ],
        "name": "",
        "render": Array [],
        "spaceAfter": false,
        "spaceBefore": false,
      },
    ],
    "global": false,
    "key": "a123",
    "tag": "Room",
  },
  "b456": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "b456#a123",
            "tag": "Exit",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [],
      },
    ],
    "key": "b456",
    "tag": "Room",
  },
  "b456#a123": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "b456",
            "tag": "Room",
          },
        ],
        "location": Array [
          0,
          0,
          0,
        ],
      },
    ],
    "from": "b456",
    "key": "b456#a123",
    "name": "",
    "tag": "Exit",
    "to": "a123",
  },
}
`;

exports[`WML normalize should denormalize condition dependencies into contextStack 1`] = `
Object {
  "Condition-0": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 1,
            "key": "a123",
            "tag": "Room",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "errors": Array [],
        "location": Array [
          0,
          1,
        ],
        "props": Object {},
      },
    ],
    "dependencies": Array [
      "strong",
    ],
    "if": "strong",
    "key": "Condition-0",
    "tag": "Condition",
  },
  "Test": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "a123",
            "tag": "Room",
          },
          Object {
            "index": 0,
            "key": "Condition-0",
            "tag": "Condition",
          },
          Object {
            "index": 0,
            "key": "strong",
            "tag": "Variable",
          },
        ],
        "contextStack": Array [],
        "description": undefined,
        "errors": Array [],
        "location": Array [
          0,
        ],
        "props": Object {},
      },
    ],
    "fileName": "Test",
    "key": "Test",
    "player": undefined,
    "tag": "Asset",
    "zone": undefined,
  },
  "a123": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "display": undefined,
        "errors": Array [],
        "location": Array [
          0,
          0,
        ],
        "name": "Vortex",
        "props": Object {},
        "render": Array [
          Object {
            "spaceAfter": false,
            "spaceBefore": false,
            "tag": "String",
            "value": "Hello, world!",
          },
        ],
        "spaceAfter": false,
        "spaceBefore": false,
      },
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "Condition-0",
            "tag": "Condition",
          },
        ],
        "display": undefined,
        "errors": Array [],
        "location": Array [
          0,
          1,
          0,
        ],
        "props": Object {},
        "render": Array [
          Object {
            "spaceAfter": false,
            "spaceBefore": false,
            "tag": "String",
            "value": "Vortex!",
          },
        ],
        "spaceAfter": false,
        "spaceBefore": false,
      },
    ],
    "global": false,
    "key": "a123",
    "tag": "Room",
  },
  "strong": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "errors": Array [],
        "location": Array [
          0,
          2,
        ],
        "props": Object {},
      },
    ],
    "default": "false",
    "key": "strong",
    "tag": "Variable",
  },
}
`;

exports[`WML normalize should denormalize condition dependencies into contextStack 2`] = `
Object {
  "Condition-0": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 1,
            "key": "a123",
            "tag": "Room",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          1,
        ],
      },
    ],
    "dependencies": Array [
      "strong",
    ],
    "if": "strong",
    "key": "Condition-0",
    "tag": "Condition",
  },
  "Test": Object {
    "Story": false,
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "a123",
            "tag": "Room",
          },
          Object {
            "index": 0,
            "key": "Condition-0",
            "tag": "Condition",
          },
          Object {
            "index": 0,
            "key": "strong",
            "tag": "Variable",
          },
        ],
        "contextStack": Array [],
        "location": Array [
          0,
        ],
      },
    ],
    "fileName": "Test",
    "instance": false,
    "key": "Test",
    "tag": "Asset",
    "zone": undefined,
  },
  "a123": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          0,
        ],
        "name": "Vortex",
        "render": Array [
          Object {
            "tag": "String",
            "value": "Hello, world!",
          },
        ],
        "spaceAfter": false,
        "spaceBefore": false,
      },
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "Condition-0",
            "tag": "Condition",
          },
        ],
        "location": Array [
          0,
          1,
          0,
        ],
        "name": "",
        "render": Array [
          Object {
            "tag": "String",
            "value": "Vortex!",
          },
        ],
        "spaceAfter": false,
        "spaceBefore": false,
      },
    ],
    "global": false,
    "key": "a123",
    "tag": "Room",
  },
  "strong": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          2,
        ],
      },
    ],
    "default": "false",
    "key": "strong",
    "tag": "Variable",
  },
}
`;

exports[`WML normalize should normalize a character asset 1`] = `
Object {
  "TESS": Object {
    "FirstImpression": "Frumpy Goth",
    "Name": "Tess",
    "OneCoolThing": "Fuchsia eyes",
    "Outfit": "A battered hoodie trimmed with lace",
    "Pronouns": Object {
      "adjective": "hers",
      "object": "her",
      "possessive": "her",
      "reflexive": "herself",
      "subject": "she",
    },
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [],
        "location": Array [
          0,
        ],
      },
    ],
    "fileName": "test.wml",
    "fileURL": "testIcon.png",
    "key": "TESS",
    "tag": "Character",
  },
}
`;

exports[`WML normalize should normalize every needed tag 1`] = `
Object {
  "ImageTest": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "TestMap",
            "tag": "Map",
          },
        ],
        "errors": Array [],
        "location": Array [
          0,
          2,
          0,
        ],
        "props": Object {},
      },
    ],
    "fileURL": "https://test.com/imageTest.png",
    "key": "ImageTest",
    "tag": "Image",
  },
  "Import-0": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "power",
            "tag": "Variable",
          },
          Object {
            "index": 0,
            "key": "overview",
            "tag": "Room",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "errors": Array [],
        "location": Array [
          0,
          0,
        ],
        "props": Object {},
      },
    ],
    "from": "BASE",
    "key": "Import-0",
    "mapping": Object {
      "overview": Object {
        "key": "overview",
        "type": "Room",
      },
      "power": Object {
        "key": "basePower",
        "type": "Variable",
      },
    },
    "tag": "Import",
  },
  "Test": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "Import-0",
            "tag": "Import",
          },
          Object {
            "index": 0,
            "key": "a123",
            "tag": "Room",
          },
          Object {
            "index": 0,
            "key": "b456",
            "tag": "Room",
          },
          Object {
            "index": 0,
            "key": "TestMap",
            "tag": "Map",
          },
          Object {
            "index": 1,
            "key": "clockTower",
            "tag": "Feature",
          },
          Object {
            "index": 0,
            "key": "active",
            "tag": "Variable",
          },
          Object {
            "index": 0,
            "key": "inactive",
            "tag": "Computed",
          },
          Object {
            "index": 0,
            "key": "toggleActive",
            "tag": "Action",
          },
        ],
        "contextStack": Array [],
        "description": undefined,
        "errors": Array [],
        "location": Array [
          0,
        ],
        "props": Object {},
      },
    ],
    "fileName": "Test",
    "key": "Test",
    "player": undefined,
    "tag": "Asset",
    "zone": undefined,
  },
  "TestMap": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "ImageTest",
            "tag": "Image",
          },
          Object {
            "index": 1,
            "key": "a123",
            "tag": "Room",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "errors": Array [],
        "images": Array [
          "ImageTest",
        ],
        "location": Array [
          0,
          2,
        ],
        "props": Object {},
        "rooms": Object {
          "a123": Object {
            "location": Array [
              0,
              2,
              1,
            ],
            "x": 200,
            "y": 150,
          },
        },
      },
    ],
    "key": "TestMap",
    "tag": "Map",
  },
  "a123": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "clockTower",
            "tag": "Feature",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "display": undefined,
        "errors": Array [],
        "location": Array [
          0,
          1,
        ],
        "props": Object {},
        "render": Array [],
        "spaceAfter": false,
        "spaceBefore": false,
      },
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "TestMap",
            "tag": "Map",
          },
        ],
        "display": undefined,
        "errors": Array [],
        "location": Array [
          0,
          2,
          1,
        ],
        "props": Object {},
        "render": Array [],
        "spaceAfter": false,
        "spaceBefore": false,
      },
    ],
    "global": false,
    "key": "a123",
    "tag": "Room",
  },
  "active": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "errors": Array [],
        "location": Array [
          0,
          4,
        ],
        "props": Object {},
      },
    ],
    "default": "true",
    "key": "active",
    "tag": "Variable",
  },
  "b456": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "b456#a123",
            "tag": "Exit",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": undefined,
      },
    ],
    "key": "b456",
    "tag": "Room",
  },
  "b456#a123": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "b456",
            "tag": "Room",
          },
        ],
        "errors": Array [],
        "location": Array [
          0,
          1,
          0,
        ],
        "props": Object {},
      },
    ],
    "from": "b456",
    "key": "b456#a123",
    "name": undefined,
    "tag": "Exit",
    "to": "a123",
  },
  "clockTower": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "a123",
            "tag": "Room",
          },
        ],
        "display": undefined,
        "errors": Array [],
        "location": Array [
          0,
          1,
          1,
        ],
        "props": Object {},
        "render": Array [],
        "spaceAfter": false,
        "spaceBefore": false,
      },
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "display": undefined,
        "errors": Array [],
        "location": Array [
          0,
          3,
        ],
        "name": "Clock Tower",
        "props": Object {},
        "render": Array [],
        "spaceAfter": false,
        "spaceBefore": false,
      },
    ],
    "global": false,
    "key": "clockTower",
    "tag": "Feature",
  },
  "inactive": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "errors": Array [],
        "location": Array [
          0,
          5,
        ],
        "props": Object {},
      },
    ],
    "dependencies": Array [
      "active",
    ],
    "key": "inactive",
    "src": "!active",
    "tag": "Computed",
  },
  "overview": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "Import-0",
            "tag": "Import",
          },
        ],
        "location": Array [
          0,
          0,
          1,
        ],
      },
    ],
    "key": "overview",
    "tag": "Room",
  },
  "power": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "Import-0",
            "tag": "Import",
          },
        ],
        "location": Array [
          0,
          0,
          0,
        ],
      },
    ],
    "key": "power",
    "tag": "Variable",
  },
  "toggleActive": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "errors": Array [],
        "location": Array [
          0,
          6,
        ],
        "props": Object {},
      },
    ],
    "key": "toggleActive",
    "src": "active = !active",
    "tag": "Action",
  },
}
`;

exports[`WML normalize should normalize every needed tag 2`] = `
Object {
  "ImageTest": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "TestMap",
            "tag": "Map",
          },
        ],
        "location": Array [
          0,
          2,
          0,
        ],
      },
    ],
    "fileURL": "https://test.com/imageTest.png",
    "key": "ImageTest",
    "tag": "Image",
  },
  "Import-0": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "power",
            "tag": "Variable",
          },
          Object {
            "index": 0,
            "key": "overview",
            "tag": "Room",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          0,
        ],
      },
    ],
    "from": "BASE",
    "key": "Import-0",
    "mapping": Object {
      "overview": Object {
        "key": "overview",
        "type": "Room",
      },
      "power": Object {
        "key": "basePower",
        "type": "Variable",
      },
    },
    "tag": "Import",
  },
  "Test": Object {
    "Story": false,
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "Import-0",
            "tag": "Import",
          },
          Object {
            "index": 0,
            "key": "a123",
            "tag": "Room",
          },
          Object {
            "index": 0,
            "key": "b456",
            "tag": "Room",
          },
          Object {
            "index": 0,
            "key": "TestMap",
            "tag": "Map",
          },
          Object {
            "index": 1,
            "key": "clockTower",
            "tag": "Feature",
          },
          Object {
            "index": 0,
            "key": "active",
            "tag": "Variable",
          },
          Object {
            "index": 0,
            "key": "inactive",
            "tag": "Computed",
          },
          Object {
            "index": 0,
            "key": "toggleActive",
            "tag": "Action",
          },
        ],
        "contextStack": Array [],
        "location": Array [
          0,
        ],
      },
    ],
    "fileName": "Test",
    "instance": false,
    "key": "Test",
    "tag": "Asset",
    "zone": undefined,
  },
  "TestMap": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "ImageTest",
            "tag": "Image",
          },
          Object {
            "index": 1,
            "key": "a123",
            "tag": "Room",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "images": Array [
          "ImageTest",
        ],
        "location": Array [
          0,
          2,
        ],
        "rooms": Object {
          "a123": Object {
            "location": Array [
              0,
              2,
              1,
            ],
            "x": 200,
            "y": 150,
          },
        },
      },
    ],
    "key": "TestMap",
    "tag": "Map",
  },
  "a123": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "clockTower",
            "tag": "Feature",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          1,
        ],
        "name": "",
        "render": Array [],
        "spaceAfter": false,
        "spaceBefore": false,
      },
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "TestMap",
            "tag": "Map",
          },
        ],
        "location": Array [
          0,
          2,
          1,
        ],
        "name": "",
        "render": Array [],
        "spaceAfter": false,
        "spaceBefore": false,
      },
    ],
    "global": false,
    "key": "a123",
    "tag": "Room",
  },
  "active": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          4,
        ],
      },
    ],
    "default": "true",
    "key": "active",
    "tag": "Variable",
  },
  "b456": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "b456#a123",
            "tag": "Exit",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [],
      },
    ],
    "key": "b456",
    "tag": "Room",
  },
  "b456#a123": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "b456",
            "tag": "Room",
          },
        ],
        "location": Array [
          0,
          1,
          0,
        ],
      },
    ],
    "from": "b456",
    "key": "b456#a123",
    "name": "",
    "tag": "Exit",
    "to": "a123",
  },
  "clockTower": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "a123",
            "tag": "Room",
          },
        ],
        "location": Array [
          0,
          1,
          1,
        ],
        "name": "",
        "render": Array [],
        "spaceAfter": false,
        "spaceBefore": false,
      },
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          3,
        ],
        "name": "Clock Tower",
        "render": Array [],
        "spaceAfter": false,
        "spaceBefore": false,
      },
    ],
    "global": false,
    "key": "clockTower",
    "tag": "Feature",
  },
  "inactive": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          5,
        ],
      },
    ],
    "dependencies": Array [
      "active",
    ],
    "key": "inactive",
    "src": "!active",
    "tag": "Computed",
  },
  "overview": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "Import-0",
            "tag": "Import",
          },
        ],
        "location": Array [
          0,
          0,
          1,
        ],
        "name": "",
        "render": Array [],
        "spaceAfter": false,
        "spaceBefore": false,
      },
    ],
    "global": false,
    "key": "overview",
    "tag": "Room",
  },
  "power": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "Import-0",
            "tag": "Import",
          },
        ],
        "location": Array [
          0,
          0,
          0,
        ],
      },
    ],
    "default": undefined,
    "key": "power",
    "tag": "Variable",
  },
  "toggleActive": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          6,
        ],
      },
    ],
    "key": "toggleActive",
    "src": "active = !active",
    "tag": "Action",
  },
}
`;

exports[`WML normalize should normalize exits into their parent room where needed 1`] = `
Object {
  "Test": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "a123",
            "tag": "Room",
          },
          Object {
            "index": 0,
            "key": "b456",
            "tag": "Room",
          },
        ],
        "contextStack": Array [],
        "description": undefined,
        "errors": Array [],
        "location": Array [
          0,
        ],
        "props": Object {},
      },
    ],
    "fileName": "Test",
    "key": "Test",
    "player": undefined,
    "tag": "Asset",
    "zone": undefined,
  },
  "a123": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "a123#b456",
            "tag": "Exit",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "display": undefined,
        "errors": Array [],
        "location": Array [
          0,
          0,
        ],
        "name": "Vortex",
        "props": Object {},
        "render": Array [],
        "spaceAfter": false,
        "spaceBefore": false,
      },
    ],
    "global": false,
    "key": "a123",
    "tag": "Room",
  },
  "a123#b456": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "a123",
            "tag": "Room",
          },
        ],
        "errors": Array [],
        "location": Array [
          0,
          0,
          0,
        ],
        "props": Object {},
      },
    ],
    "from": "a123",
    "key": "a123#b456",
    "name": undefined,
    "tag": "Exit",
    "to": "b456",
  },
  "b456": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "display": undefined,
        "errors": Array [],
        "location": Array [
          0,
          2,
        ],
        "name": "Welcome",
        "props": Object {},
        "render": Array [],
        "spaceAfter": false,
        "spaceBefore": false,
      },
    ],
    "global": false,
    "key": "b456",
    "tag": "Room",
  },
}
`;

exports[`WML normalize should normalize exits into their parent room where needed 2`] = `
Object {
  "Test": Object {
    "Story": false,
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "a123",
            "tag": "Room",
          },
          Object {
            "index": 0,
            "key": "b456",
            "tag": "Room",
          },
          Object {
            "index": 1,
            "key": "b456",
            "tag": "Room",
          },
        ],
        "contextStack": Array [],
        "location": Array [
          0,
        ],
      },
    ],
    "fileName": "Test",
    "instance": false,
    "key": "Test",
    "tag": "Asset",
    "zone": undefined,
  },
  "a123": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "a123#b456",
            "tag": "Exit",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          0,
        ],
        "name": "Vortex",
        "render": Array [],
        "spaceAfter": false,
        "spaceBefore": false,
      },
    ],
    "global": false,
    "key": "a123",
    "tag": "Room",
  },
  "a123#b456": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "a123",
            "tag": "Room",
          },
        ],
        "location": Array [
          0,
          0,
          0,
        ],
      },
    ],
    "from": "a123",
    "key": "a123#b456",
    "tag": "Exit",
    "to": "b456",
  },
  "b456": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "b456#a123",
            "tag": "Exit",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
        ],
      },
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          2,
        ],
        "name": "Welcome",
        "render": Array [],
        "spaceAfter": false,
        "spaceBefore": false,
      },
    ],
    "key": "b456",
    "tag": "Room",
  },
  "b456#a123": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "b456",
            "tag": "Room",
          },
        ],
        "location": Array [
          0,
          1,
        ],
      },
    ],
    "from": "b456",
    "key": "b456#a123",
    "name": "",
    "tag": "Exit",
    "to": "a123",
  },
}
`;

exports[`WML normalize transformNode should pass a global exit in a room wrapper, with synthetic key 1`] = `
Object {
  "contextStack": Array [
    Object {
      "index": 0,
      "key": "Test",
      "tag": "Asset",
    },
    Object {
      "key": "DEF",
      "tag": "Room",
    },
  ],
  "node": Object {
    "contents": Array [],
    "from": "DEF",
    "key": "DEF#ABC",
    "tag": "Exit",
    "to": "ABC",
  },
}
`;

exports[`WML normalize transformNode should pass a local from exit at same level, with synthetic key 1`] = `
Object {
  "contextStack": Array [
    Object {
      "index": 0,
      "key": "Test",
      "tag": "Asset",
    },
    Object {
      "index": 0,
      "key": "ABC",
      "tag": "Room",
    },
  ],
  "node": Object {
    "contents": Array [],
    "from": "ABC",
    "key": "ABC#DEF",
    "tag": "Exit",
    "to": "DEF",
  },
}
`;

exports[`WML normalize transformNode should pass a local from exit at same level, with synthetic key 2`] = `
Object {
  "contextStack": Array [
    Object {
      "index": 0,
      "key": "Test",
      "tag": "Asset",
    },
    Object {
      "index": 0,
      "key": "ABC",
      "tag": "Room",
    },
    Object {
      "index": 0,
      "key": "Condition-0",
      "tag": "Condition",
    },
  ],
  "node": Object {
    "contents": Array [],
    "from": "ABC",
    "key": "ABC#DEF",
    "tag": "Exit",
    "to": "DEF",
  },
}
`;

exports[`WML normalize transformNode should pass a local to exit in a sibling room wrapper, with synthetic key 1`] = `
Object {
  "contextStack": Array [
    Object {
      "index": 0,
      "key": "Test",
      "tag": "Asset",
    },
    Object {
      "key": "DEF",
      "tag": "Room",
    },
  ],
  "node": Object {
    "contents": Array [],
    "from": "DEF",
    "key": "DEF#ABC",
    "tag": "Exit",
    "to": "ABC",
  },
}
`;

exports[`WML normalize transformNode should pass a local to exit in a sibling room wrapper, with synthetic key 2`] = `
Object {
  "contextStack": Array [
    Object {
      "index": 0,
      "key": "Test",
      "tag": "Asset",
    },
    Object {
      "key": "DEF",
      "tag": "Room",
    },
    Object {
      "index": 0,
      "key": "Condition-0",
      "tag": "Condition",
    },
  ],
  "node": Object {
    "contents": Array [],
    "from": "DEF",
    "key": "DEF#ABC",
    "tag": "Exit",
    "to": "ABC",
  },
}
`;

exports[`WML normalize transformNode should pass room key unchanged 1`] = `
Object {
  "contextStack": Array [
    Object {
      "index": 0,
      "key": "Test",
      "tag": "Asset",
    },
  ],
  "node": Object {
    "contents": Array [],
    "key": "ABC",
    "name": "Vortex",
    "tag": "Room",
  },
}
`;

exports[`WML normalize transformNode should synthesize a key for condition tag 1`] = `
Object {
  "contextStack": Array [
    Object {
      "index": 0,
      "key": "Test",
      "tag": "Asset",
    },
  ],
  "node": Object {
    "contents": Array [],
    "if": "true",
    "key": "Condition-0",
    "tag": "Condition",
  },
}
`;
